# git-dep

./: git-dep.cabal
src/: Command.hs  Git.hs  GitPlumbing.hs  Graph.hs  GraphTree.hs  Main.hs  RepositoryUtils.hs
